restruturacao do layounte backend

--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prosperity OS - Seu Mentor Financeiro Pessoal</title>
-    <meta name="description" content="App de mentor financeiro para sair do sufoco, evitar falta de dinheiro e antecipar dívidas com estratégias inteligentes." />
-    <meta name="author" content="Prosperity OS" />
-
-    <meta property="og:title" content="Prosperity OS - Mentor Financeiro Pessoal" />
-    <meta property="og:description" content="Organize suas finanças, evite sufoco financeiro e conquiste prosperidade com sabedoria" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <title>Prosperity OS</title>
+    <meta name="description" content="Seu sistema operacional de prosperidade financeira" />
+    <meta name="author" content="Ronald Digital" />
+    <meta property="og:title" content="Prosperity OS" />
+    <meta property="og:description" content="Seu sistema operacional de prosperidade financeira" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
